gcc/testsuite/rust/rustc/ui/pattern/pattern-bad-ref-box-order.rs
//@ run-rustfix

#![feature(box_patterns)]
#![allow(dead_code)]

fn foo(f: Option<Box<i32>>) {
    match f {
        Some(ref box _i) => {},
// { dg-error "" "" { target *-*-* } .-1 }
        None => {}
    }
}

fn main() { }

